# quant-news-sentiment

./: .env.example  .gitignore  LICENSE  PROGRESS.md  README.md  pyproject.toml
notebooks/: 01_data_exploration.ipynb  02_sentiment_analysis.ipynb
src/data_collection/: news_scraper.py  price_loader.py
src/features/: panel.py  sentiment.py  technical.py
tests/: test_news_scraper.py  test_panel.py  test_price_loader.py  test_sentiment.py  test_technical.py
