[project]
name = "quant-news-sentiment"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "yfinance>=1.2.0",
]
