[project]
name = "quant-news-sentiment"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.12",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openai>=2.30.0",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "transformers>=5.5.0",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
